# chatbot

./: bird_openapi.yml  config.py  pyproject.toml  requirements.txt  serper_search.py  streamlit_app.py
.streamlit/: config.toml
components/: chat.py  chat_view.py  jira_ticket.py  jira_tools.py  model_selector.py  primitives.py  sidebar.py  state.py  utils.py
pages/: step1.py  step2.py
