[project]
name = "EU-Chatbot"
version = "0.1.0"
description = "Unser toller Chatbot!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llmling-agent[default]>=0.99.7",
    "streamlit>=1.42.0",
    "markitdown",
    "streamlit-pydantic",
]


[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "basic"
deprecateTypingAliases = true
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportUnknownVariableType = false
reportAny = false
reportImplicitOverride = false
reportUnusedFunction = false
reportImplicitStringConcatenation = false
reportIgnoreCommentWithoutRule = false
reportUnannotatedClassAttribute = false
reportSelfClsParameterName = false
reportPrivateImportUsage = false
reportUnusedExpression = false
